Change LCZEngine to LCZeroEngine and fix debug evaluate

--- a/notebooks/Examples.ipynb
+++ b/notebooks/Examples.ipynb
@@ -184,10 +184,10 @@
     }
    ],
    "source": [
-    "from lcztools.testing.leela_engine import LCZEngine\n",
+    "from lcztools.testing.leela_engine import LCZeroEngine\n",
     "# Create engine... Uses lczero, defined in lcztools.ini\n",
     "!rm -f lczero_log.txt\n",
-    "engine = LCZEngine(nodes=800)"
+    "engine = LCZeroEngine(nodes=800)"
    ]
   },
   {
