Improvements to training data parsing, some restructuring

--- a/notebooks/Examples.ipynb
+++ b/notebooks/Examples.ipynb
@@ -261,80 +261,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using 1 thread(s).\r\n",
-      "Detecting residual layers...v2...192 channels...15 blocks.\r\n",
-      "info string Found 0 wdl tablebases\r\n",
-      "info string Found 0 dtz tablebases\r\n",
-      ">>uci\r\n",
-      "id name lczero v0.10\r\n",
-      "id author The LCZero Authors\r\n",
-      "option name Threads type spin default 1 min 1 max 8\r\n",
-      "option name Quiet type check default false\r\n",
-      "option name SyzygyPath type string default syzygy\r\n",
-      "option name FPU Reduction type string default 0.100000\r\n",
-      "option name Puct type string default 0.600000\r\n",
-      "option name SlowMover type spin default 89 min 1 max 2147483647\r\n",
-      "option name GoNodesPlayouts type check default false\r\n",
-      "uciok\r\n",
-      ">>position startpos moves e2e4 e7e5\r\n",
-      ">>go nodes 800\r\n",
-      "info depth 6 nodes 2 nps 17 tbhits 0 score cp 21 time 57 pv g1f3 b8c6\r\n",
-      "info depth 7 nodes 3 nps 24 tbhits 0 score cp 17 time 83 pv g1f3 b8c6 f1b5\r\n",
-      "info depth 8 nodes 4 nps 27 tbhits 0 score cp 19 time 111 pv g1f3 b8c6 f1b5 g8f6\r\n",
-      "info depth 8 nodes 5 nps 29 tbhits 0 score cp 15 time 138 pv g1f3 b8c6 f1b5 g8f6 e1g1\r\n",
-      "info depth 9 nodes 7 nps 30 tbhits 0 score cp 16 time 200 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6\r\n",
-      "info depth 9 nodes 9 nps 31 tbhits 0 score cp 17 time 258 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1\r\n",
-      "info depth 10 nodes 16 nps 33 tbhits 0 score cp 20 time 454 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7\r\n",
-      "info depth 10 nodes 18 nps 33 tbhits 0 score cp 19 time 514 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3\r\n",
-      "info depth 11 nodes 37 nps 34 tbhits 0 score cp 18 time 1051 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3\r\n",
-      "info depth 12 nodes 42 nps 34 tbhits 0 score cp 18 time 1197 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8\r\n",
-      "info depth 12 nodes 45 nps 34 tbhits 0 score cp 18 time 1283 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8\r\n",
-      "info depth 12 nodes 55 nps 35 tbhits 0 score cp 17 time 1551 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\r\n",
-      "info depth 12 nodes 61 nps 35 tbhits 0 score cp 17 time 1712 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\r\n",
-      "info depth 13 nodes 72 nps 35 tbhits 0 score cp 16 time 2013 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\r\n",
-      "info depth 13 nodes 86 nps 35 tbhits 0 score cp 16 time 2429 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7\r\n",
-      "info depth 13 nodes 101 nps 35 tbhits 0 score cp 16 time 2840 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3\r\n",
-      "info depth 14 nodes 119 nps 35 tbhits 0 score cp 17 time 3334 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3\r\n",
-      "info depth 14 nodes 145 nps 35 tbhits 0 score cp 16 time 4064 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 h2h3 a7a6 b5a4\r\n",
-      "info depth 15 nodes 231 nps 36 tbhits 0 score cp 16 time 6375 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5\r\n",
-      "info depth 15 nodes 235 nps 36 tbhits 0 score cp 16 time 6482 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5\r\n",
-      "info depth 15 nodes 342 nps 36 tbhits 0 score cp 15 time 9385 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\r\n",
-      "info depth 15 nodes 347 nps 36 tbhits 0 score cp 15 time 9519 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\r\n",
-      "\r\n",
-      "info string   Ba6 ->       0   (V: 51.28%) (N:  0.07%) PV: Ba6 \r\n",
-      "info string   Ke2 ->       0   (V: 51.28%) (N:  0.12%) PV: Ke2 \r\n",
-      "info string    g4 ->       0   (V: 51.28%) (N:  0.18%) PV: g4 \r\n",
-      "info string    b4 ->       0   (V: 51.28%) (N:  0.18%) PV: b4 \r\n",
-      "info string   Qg4 ->       0   (V: 51.28%) (N:  0.20%) PV: Qg4 \r\n",
-      "info string   Qh5 ->       0   (V: 51.28%) (N:  0.21%) PV: Qh5 \r\n",
-      "info string   Qe2 ->       0   (V: 51.28%) (N:  0.27%) PV: Qe2 \r\n",
-      "info string   Nh3 ->       0   (V: 51.28%) (N:  0.28%) PV: Nh3 \r\n",
-      "info string   Qf3 ->       0   (V: 51.28%) (N:  0.28%) PV: Qf3 \r\n",
-      "info string    h4 ->       0   (V: 51.28%) (N:  0.30%) PV: h4 \r\n",
-      "info string   Na3 ->       0   (V: 51.28%) (N:  0.32%) PV: Na3 \r\n",
-      "info string    f3 ->       0   (V: 51.28%) (N:  0.34%) PV: f3 \r\n",
-      "info string   Bb5 ->       0   (V: 51.28%) (N:  0.39%) PV: Bb5 \r\n",
-      "info string    f4 ->       0   (V: 51.28%) (N:  0.41%) PV: f4 \r\n",
-      "info string   Bd3 ->       0   (V: 51.28%) (N:  0.43%) PV: Bd3 \r\n",
-      "info string    b3 ->       0   (V: 51.28%) (N:  0.43%) PV: b3 \r\n",
-      "info string    g3 ->       0   (V: 51.28%) (N:  0.46%) PV: g3 \r\n",
-      "info string   Ne2 ->       0   (V: 51.28%) (N:  0.47%) PV: Ne2 \r\n",
-      "info string    a4 ->       0   (V: 51.28%) (N:  0.49%) PV: a4 \r\n",
-      "info string    h3 ->       0   (V: 51.28%) (N:  0.51%) PV: h3 \r\n",
-      "info string    a3 ->       0   (V: 51.28%) (N:  0.70%) PV: a3 \r\n",
-      "info string    c3 ->       0   (V: 51.28%) (N:  0.72%) PV: c3 \r\n",
-      "info string   Be2 ->       0   (V: 51.28%) (N:  0.75%) PV: Be2 \r\n",
-      "info string    d3 ->       0   (V: 51.28%) (N:  0.95%) PV: d3 \r\n",
-      "info string    c4 ->       2   (V: 48.62%) (N:  1.00%) PV: c4 Bc5 Nf3\r\n",
-      "info string    d4 ->       2   (V: 49.62%) (N:  1.18%) PV: d4 exd4 Nf3\r\n",
-      "info string   Bc4 ->       2   (V: 49.84%) (N:  1.04%) PV: Bc4 Nf6 d3\r\n",
-      "info string   Nc3 ->      12   (V: 50.45%) (N:  4.10%) PV: Nc3 Nf6 Nf3 Nc6 Bb5 Nd4 O-O\r\n",
-      "info string   Nf3 ->     397   (V: 51.84%) (N: 83.21%) PV: Nf3 Nc6 Bb5 Nf6 O-O d6 Re1 Be7 c3 O-O d4 Bd7 h3 Re8 d5 Nb8\r\n",
-      "info string stm White winrate 51.76%\r\n",
-      "\r\n",
-      "info depth 16 nodes 416 nps 37 tbhits 0 score cp 15 time 11368 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\r\n",
-      "bestmove g1f3\r\n",
-      ">>quit\r\n"
+      "Using 1 thread(s).\n",
+      "Detecting residual layers...v2...192 channels...15 blocks.\n",
+      "info string Found 0 wdl tablebases\n",
+      "info string Found 0 dtz tablebases\n",
+      ">>uci\n",
+      "id name lczero v0.10\n",
+      "id author The LCZero Authors\n",
+      "option name Threads type spin default 1 min 1 max 8\n",
+      "option name Quiet type check default false\n",
+      "option name SyzygyPath type string default syzygy\n",
+      "option name FPU Reduction type string default 0.100000\n",
+      "option name Puct type string default 0.600000\n",
+      "option name SlowMover type spin default 89 min 1 max 2147483647\n",
+      "option name GoNodesPlayouts type check default false\n",
+      "uciok\n",
+      ">>position startpos moves e2e4 e7e5\n",
+      ">>go nodes 800\n",
+      "info depth 6 nodes 2 nps 16 tbhits 0 score cp 21 time 63 pv g1f3 b8c6\n",
+      "info depth 7 nodes 3 nps 22 tbhits 0 score cp 17 time 90 pv g1f3 b8c6 f1b5\n",
+      "info depth 8 nodes 4 nps 25 tbhits 0 score cp 19 time 119 pv g1f3 b8c6 f1b5 g8f6\n",
+      "info depth 8 nodes 5 nps 26 tbhits 0 score cp 15 time 151 pv g1f3 b8c6 f1b5 g8f6 e1g1\n",
+      "info depth 9 nodes 7 nps 28 tbhits 0 score cp 16 time 217 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6\n",
+      "info depth 9 nodes 9 nps 28 tbhits 0 score cp 17 time 283 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1\n",
+      "info depth 10 nodes 16 nps 31 tbhits 0 score cp 20 time 490 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7\n",
+      "info depth 10 nodes 18 nps 31 tbhits 0 score cp 19 time 548 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3\n",
+      "info depth 11 nodes 37 nps 34 tbhits 0 score cp 18 time 1072 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3\n",
+      "info depth 12 nodes 42 nps 34 tbhits 0 score cp 18 time 1216 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8\n",
+      "info depth 12 nodes 45 nps 34 tbhits 0 score cp 18 time 1296 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8\n",
+      "info depth 12 nodes 55 nps 34 tbhits 0 score cp 17 time 1576 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\n",
+      "info depth 12 nodes 61 nps 34 tbhits 0 score cp 17 time 1744 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\n",
+      "info depth 13 nodes 72 nps 35 tbhits 0 score cp 16 time 2052 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4\n",
+      "info depth 13 nodes 86 nps 35 tbhits 0 score cp 16 time 2442 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7\n",
+      "info depth 13 nodes 101 nps 35 tbhits 0 score cp 16 time 2858 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3\n",
+      "info depth 14 nodes 119 nps 35 tbhits 0 score cp 17 time 3370 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3\n",
+      "info depth 14 nodes 145 nps 35 tbhits 0 score cp 16 time 4087 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 h2h3 a7a6 b5a4\n",
+      "info depth 15 nodes 231 nps 36 tbhits 0 score cp 16 time 6402 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5\n",
+      "info depth 15 nodes 235 nps 36 tbhits 0 score cp 16 time 6509 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5\n",
+      "info depth 15 nodes 342 nps 36 tbhits 0 score cp 15 time 9376 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\n",
+      "info depth 15 nodes 347 nps 36 tbhits 0 score cp 15 time 9510 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\n",
+      "\n",
+      "info string   Ba6 ->       0   (V: 51.28%) (N:  0.07%) PV: Ba6 \n",
+      "info string   Ke2 ->       0   (V: 51.28%) (N:  0.12%) PV: Ke2 \n",
+      "info string    g4 ->       0   (V: 51.28%) (N:  0.18%) PV: g4 \n",
+      "info string    b4 ->       0   (V: 51.28%) (N:  0.18%) PV: b4 \n",
+      "info string   Qg4 ->       0   (V: 51.28%) (N:  0.20%) PV: Qg4 \n",
+      "info string   Qh5 ->       0   (V: 51.28%) (N:  0.21%) PV: Qh5 \n",
+      "info string   Qe2 ->       0   (V: 51.28%) (N:  0.27%) PV: Qe2 \n",
+      "info string   Nh3 ->       0   (V: 51.28%) (N:  0.28%) PV: Nh3 \n",
+      "info string   Qf3 ->       0   (V: 51.28%) (N:  0.28%) PV: Qf3 \n",
+      "info string    h4 ->       0   (V: 51.28%) (N:  0.30%) PV: h4 \n",
+      "info string   Na3 ->       0   (V: 51.28%) (N:  0.32%) PV: Na3 \n",
+      "info string    f3 ->       0   (V: 51.28%) (N:  0.34%) PV: f3 \n",
+      "info string   Bb5 ->       0   (V: 51.28%) (N:  0.39%) PV: Bb5 \n",
+      "info string    f4 ->       0   (V: 51.28%) (N:  0.41%) PV: f4 \n",
+      "info string   Bd3 ->       0   (V: 51.28%) (N:  0.43%) PV: Bd3 \n",
+      "info string    b3 ->       0   (V: 51.28%) (N:  0.43%) PV: b3 \n",
+      "info string    g3 ->       0   (V: 51.28%) (N:  0.46%) PV: g3 \n",
+      "info string   Ne2 ->       0   (V: 51.28%) (N:  0.47%) PV: Ne2 \n",
+      "info string    a4 ->       0   (V: 51.28%) (N:  0.49%) PV: a4 \n",
+      "info string    h3 ->       0   (V: 51.28%) (N:  0.51%) PV: h3 \n",
+      "info string    a3 ->       0   (V: 51.28%) (N:  0.70%) PV: a3 \n",
+      "info string    c3 ->       0   (V: 51.28%) (N:  0.72%) PV: c3 \n",
+      "info string   Be2 ->       0   (V: 51.28%) (N:  0.75%) PV: Be2 \n",
+      "info string    d3 ->       0   (V: 51.28%) (N:  0.95%) PV: d3 \n",
+      "info string    c4 ->       2   (V: 48.62%) (N:  1.00%) PV: c4 Bc5 Nf3\n",
+      "info string    d4 ->       2   (V: 49.62%) (N:  1.18%) PV: d4 exd4 Nf3\n",
+      "info string   Bc4 ->       2   (V: 49.84%) (N:  1.04%) PV: Bc4 Nf6 d3\n",
+      "info string   Nc3 ->      12   (V: 50.45%) (N:  4.10%) PV: Nc3 Nf6 Nf3 Nc6 Bb5 Nd4 O-O\n",
+      "info string   Nf3 ->     397   (V: 51.84%) (N: 83.21%) PV: Nf3 Nc6 Bb5 Nf6 O-O d6 Re1 Be7 c3 O-O d4 Bd7 h3 Re8 d5 Nb8\n",
+      "info string stm White winrate 51.76%\n",
+      "\n",
+      "info depth 16 nodes 416 nps 36 tbhits 0 score cp 15 time 11612 pv g1f3 b8c6 f1b5 g8f6 e1g1 d7d6 f1e1 f8e7 c2c3 e8g8 d2d4 c8d7 h2h3 f8e8 d4d5 c6b8\n",
+      "bestmove g1f3\n",
+      ">>quit\n"
      ]
     }
    ],
@@ -366,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
