Train Leela example

--- a/notebooks/lcz_training/TrainLeela.ipynb
+++ b/notebooks/lcz_training/TrainLeela.ipynb
@@ -4,8 +4,91 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading network using backend=pytorch_train_cuda, policy_softmax_temp=2.2\n",
+      "Channels 256\n",
+      "Blocks 20\n",
+      "Enabling CUDA!\n",
+      "+ conv_val.conv1.weight\n",
+      "+ conv_val.conv1_bn.bias\n",
+      "+ affine_val_1.weight\n",
+      "+ affine_val_1.bias\n",
+      "+ affine_val_2.weight\n",
+      "+ affine_val_2.bias\n",
+      "0.33122138580307364\n",
+      "0.32327708806842564\n",
+      "0.342647999804467\n",
+      "0.30650920746847987\n",
+      "0.34121590862050655\n",
+      "0.31692144978791476\n",
+      "0.2926337251719087\n",
+      "0.3612888185679913\n",
+      "0.32078073009848596\n",
+      "0.33477764517068864\n",
+      "0.33724299166351557\n",
+      "0.29047099124640224\n",
+      "0.3376015657559037\n",
+      "0.3247099100984633\n",
+      "0.3170356016419828\n",
+      "0.2968645826354623\n",
+      "0.3251196685619652\n",
+      "0.33669298788532614\n",
+      "0.26937713043764233\n",
+      "0.33238239696249366\n",
+      "0.31816340910270813\n",
+      "0.32765887467190624\n",
+      "0.3277877380698919\n",
+      "0.3299694628827274\n",
+      "0.33974271538667383\n",
+      "0.33874722172040495\n",
+      "0.28303455530665816\n",
+      "0.29582444167695937\n",
+      "0.3109586057346314\n",
+      "0.31915072560776026\n",
+      "0.26685509014409037\n",
+      "0.31726893690880387\n",
+      "0.28230360097251833\n",
+      "0.2911954136285931\n",
+      "0.31076860865578054\n",
+      "0.3014677645917982\n",
+      "0.33730487290304156\n",
+      "0.25808153552934526\n",
+      "0.3813514027744532\n",
+      "0.3000475941039622\n",
+      "0.31898987393826245\n",
+      "0.3520307368272915\n",
+      "0.3076914825686254\n",
+      "0.2620176869956776\n",
+      "0.27852552672382447\n",
+      "0.2695530009781942\n",
+      "0.3187382895802148\n",
+      "0.2566404694085941\n",
+      "0.3254203283647075\n",
+      "0.26879885351751\n",
+      "0.31229888861533256\n",
+      "0.34966941135236995\n",
+      "0.3004613875132054\n",
+      "0.2827500160690397\n",
+      "0.36580940315965566\n",
+      "0.27884005995234473\n",
+      "0.3543519354728051\n",
+      "0.28202596956864\n",
+      "0.2855419478751719\n"
+     ]
+    }
+   ],
    "source": [
+    "# Training example\n",
+    "# \n",
+    "# Using the match game training_data.tgz as created by running scripts/download_match_games/download_match_games.py\n",
+    "# followed by scripts/download_match_games/make_training_data.py\n",
+    "#\n",
+    "# TODO: Need to shuffle data, add a test/train split.\n",
+    "\n",
     "import pickle\n",
     "import tarfile\n",
     "import chess.pgn\n",
@@ -67,6 +150,13 @@
     "\n",
     "net.model.save_weights_file('/home/trevor/projects/lczero/weights/txt/test_weights_3.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
